Closed Bug 1784841 Opened 3 years ago Closed 3 years ago

[CTW] Platforms don't use unified OffsetAtPoint (AKA OffsetAtPoint doesn't support cached RemoteAccessible on Windows)

Categories

(Core :: Disability Access APIs, defect)

defect

Tracking

()

RESOLVED FIXED
105 Branch
Tracking Status
firefox105 --- fixed

People

(Reporter: Jamie, Assigned: Jamie)

References

Details

(Whiteboard: [ctw-m2])

Attachments

(1 file)

I discovered this while I was verifying real world test cases for ctw-m2.

Bug 1775329 unifies OffsetAtPoint and implements support for cached RemoteAccessible. However, the platform specific code doesn't use this unified method.

On non-Windows, this isn't a problem because we just have a pointless conditional for local and remote; we still do the right thing. However, on Windows, the code was local only, so this just returns failure for cached remote.

Most importantly, this means OffsetAtPoint is now supported for cached RemoteAccessible on Windows.

Pushed by jteh@mozilla.com: https://hg.mozilla.org/integration/autoland/rev/e649496f940b Use unified OffsetAtPoint in platform specific code. r=morgan
Status: NEW → RESOLVED
Closed: 3 years ago
Resolution: --- → FIXED
Target Milestone: --- → 105 Branch
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: